--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -8,7 +8,7 @@ set-option -sg escape-time 0
 
 unbind C-b
 set-option -g prefix C-Space
-bind-key C-Space send-prefix
+bind C-Space send-prefix
 
 # Start pane numbers at 1
 set -g base-index 1
@@ -19,6 +19,7 @@ set -g renumber-windows on
 
 # Create windows in current path, instead of path where session was created
 bind c new-window -c "#{pane_current_path}"
+bind q kill-pane
 
 # reload with "r"
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -26,15 +27,15 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind Space last-window
 
 # vim like keybinds
-bind-key v split-window -h
-bind-key s split-window -v
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+bind v split-window -h
+bind s split-window -v
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Resize in bigger units, using vim keys
 bind -r C-j resize-pane -D 15
