--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -19,6 +19,7 @@ set -g renumber-windows on
 
 # Create windows in current path, instead of path where session was created
 bind c new-window -c "#{pane_current_path}"
+unbind x
 bind q kill-pane
 
 # reload with "r"
