--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -25,6 +25,10 @@ bind q kill-pane
 # reload with "r"
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+# dont use current window name as default when renaming
+unbind ,
+bind-key , command-prompt -p (rename-window) "rename-window '%%'"
+
 bind Space last-window
 
 # vim like keybinds
