--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -10,6 +10,9 @@ unbind C-b
 set-option -g prefix C-Space
 bind C-Space send-prefix
 
+# hide status on the right (hostname, time and date)
+set-option -g status-right ""
+
 # Start pane numbers at 1
 set -g base-index 1
 setw -g pane-base-index 1
