--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -20,8 +20,9 @@ setw -g pane-base-index 1
 # Renumber windows to match positions
 set -g renumber-windows on
 
-# Create windows in current path, instead of path where session was created
-bind c new-window -c "#{pane_current_path}"
+# Create windows in current path, instead of path where session was created. Create with empty name
+bind c new-window -c "#{pane_current_path}" -n ''
+
 unbind x
 bind q kill-pane
 
