tmux split path
Signed-off-by: Tomás Mota <tmm@danskecommodities.com>

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -36,8 +36,8 @@ bind-key , command-prompt -p (rename-window) "rename-window '%%'"
 bind Space last-window
 
 # vim like keybinds
-bind v split-window -h
-bind s split-window -v
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
