--- a/dot_config/tmux/executable_tmux.conf
+++ b/dot_config/tmux/executable_tmux.conf
@@ -27,7 +27,7 @@ unbind x
 bind q kill-pane
 
 # reload with "r"
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display "Reloaded!"
 
 # dont use current window name as default when renaming
 unbind ,
