--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,5 +1,8 @@
 enable_audio_bell no
-font_family MesloLGS NF
+# font_family MesloLGS NF
+# font_family JetBrains Mono Bold
+font_family monofur
+font_size 14
 
 # BEGIN_KITTY_THEME
 # Monokai Pro (filter Octagon)
