--- a/dot_config/tmux/executable_tmux.conf
+++ b/dot_config/tmux/executable_tmux.conf
@@ -52,3 +52,16 @@ bind -r C-k resize-pane -U 5
 bind -r C-h resize-pane -L 15
 bind -r C-l resize-pane -R 15
 
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+set -g @ressurect-capture-pane-contents 'on'
+
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Initialize TMUX plugin manager 
+run '~/.tmux/plugins/tpm/tpm'
