--- a/dot_config/tmux/executable_tmux.conf
+++ b/dot_config/tmux/executable_tmux.conf
@@ -46,6 +46,9 @@ bind l select-pane -R
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
+# use u for entering copy-mode
+bind-key -n 'C-u' copy-mode
+
 # Resize in bigger units, using vim keys
 bind -r C-j resize-pane -D 5
 bind -r C-k resize-pane -U 5
