--- a/dot_config/tmux/executable_tmux.conf
+++ b/dot_config/tmux/executable_tmux.conf
@@ -46,9 +46,6 @@ bind l select-pane -R
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-# use u for entering copy-mode
-bind-key -n 'C-u' copy-mode
-
 # Resize in bigger units, using vim keys
 bind -r C-j resize-pane -D 5
 bind -r C-k resize-pane -U 5
@@ -57,14 +54,15 @@ bind -r C-l resize-pane -R 15
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @ressurect-capture-pane-contents 'on'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
-set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
 
 # Initialize TMUX plugin manager 
 run '~/.tmux/plugins/tpm/tpm'
