--- a/dot_config/tmux/executable_tmux.conf
+++ b/dot_config/tmux/executable_tmux.conf
@@ -63,6 +63,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
 set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_window_tabs_enabled on
 
 # Initialize TMUX plugin manager 
 run '~/.tmux/plugins/tpm/tpm'
