--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,8 +1,9 @@
 enable_audio_bell no
 # font_family MesloLGS NF
-# font_family JetBrains Mono Bold
-font_family monofur
-font_size 14
+# font_family JetBrainsMono Nerd Font
+# font_family monofur
+font_family CaskaydiaCove Nerd Font
+font_size 12
 
 # BEGIN_KITTY_THEME
 # Monokai Pro (filter Octagon)
