--- a/dot_config/tmux/executable_tmux.conf
+++ b/dot_config/tmux/executable_tmux.conf
@@ -25,6 +25,7 @@ bind c new-window -c "#{pane_current_path}" -n ''
 
 unbind x
 bind q kill-pane
+bind C-q kill-window
 
 # reload with "r"
 bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display "Reloaded!"
